feat: generate token with json
remove example request

fix: Add addressess components annotations

fix: Swagger-ui authorization

removed useless comments

fix: removes openapi config

fiix: Corrige openapi config
