# src/main/java/com/fiap/techchallenge/infrastructure/adapters/in/web/AuthApiImpl.java
@@ -3,6 +3,7 @@ package com.fiap.techchallenge.infrastructure.adapters.in.web;
 import com.fiap.techchallenge.api.AuthApi;
 import com.fiap.techchallenge.application.services.auth.impl.AuthUseCaseImpl;
 import com.fiap.techchallenge.model.LoginRequest;
+import com.fiap.techchallenge.model.LoginResponse;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -23,7 +24,7 @@ public class AuthApiImpl implements AuthApi {
     }
 
     @Override
-    public ResponseEntity<String> login(@RequestBody LoginRequest loginRequest) {
+    public ResponseEntity<LoginResponse> login(@RequestBody LoginRequest loginRequest) {
         return authUseCaseImpl.authenticate(loginRequest);
     }
 }
